--- a/bt_def/src/main/res/layout/list_item.xml
+++ b/bt_def/src/main/res/layout/list_item.xml
@@ -2,9 +2,8 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginStart="3dp"
     android:layout_marginTop="3dp"
     android:layout_marginEnd="3dp"
