--- a/bt_def/src/main/res/values/colors.xml
+++ b/bt_def/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#F12F2F</color>
     <color name="blue">#2FBAF1</color>
+    <color name="red2">#D31A1A</color>
     <color name="white_dark">#AAAAAA</color>
+
 </resources>
