--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="red">#F44336</color>
     <color name="green">#4CAF50</color>
+    <color name="green2">#377E3A</color>
 </resources>
